@@ -3,8 +3,8 @@ package io.pumpkinz.pumpkinreader.util;
 import android.content.res.Resources;
 import android.util.Log;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Pattern;
@@ -14,15 +14,13 @@ public class Util {
 
     public static String getDomainName(String url) {
         try {
-            if (url.isEmpty()) {
-                throw new URISyntaxException(url, "Empty URL");
-            }
-
-            URI uri = new URI(url);
+            URL uri = new URL(url);
             String domain = uri.getHost();
+
             return domain.startsWith("www.") ? domain.substring(4) : domain;
-        } catch (URISyntaxException ex) {
-            return url;
+        } catch (MalformedURLException ex) {
+            Log.e("URL ERROR", ex.toString());
+            return "";
         }
     }
 
@@ -30,7 +28,9 @@ public class Util {
         StringBuilder sb = new StringBuilder();
         for (int i = 0, n = list.size(); i < n; ++i) {
             sb.append(list.get(i).toString());
-            if (i < n) { sb.append(separator); }
+            if (i < n) {
+                sb.append(separator);
+            }
         }
 
         return sb.toString();
